<resources>
    <string name="app_name">TrojaNow</string>

    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_new_status">New status</string>
    <string name="menu_item_add_follow">Add follow</string>
    <string name="menu_item_new_chat">New chat</string>

    <string name="title_activity_new_status">New status</string>
    <string name="title_activity_setting">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_signin">Welcome Trojan!</string>

    <string name="discard_new_status_confirmation">Are you sure to discard this status?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="temperature">Temperature</string>
    <string name="location">Location</string>
    <string name="anonymous">Anonymous</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm password</string>
    <string name="nickname">Nickname</string>
    <string name="signin">Sign In</string>
    <string name="register">Register</string>
    <string name="signout">Sign Out</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
