<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="name.yyx.trojanow.RegisterActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <EditText
            android:id="@+id/et_reg_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColorHint="#cccccc" />

        <EditText
            android:id="@+id/et_reg_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:password="true"
            android:textColorHint="#cccccc"/>

        <EditText
            android:id="@+id/et_reg_pwd_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_confirm"
            android:password="true"
            android:textColorHint="#cccccc"/>

        <EditText
            android:id="@+id/et_reg_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nickname"
            android:textColorHint="#cccccc"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="4dp"
            android:text="Register"
            style="@style/MyButton"
            android:clickable="true" />

    </LinearLayout>

</RelativeLayout>
