<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="name.yyx.trojanow.SigninActivity">
    <LinearLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:focusable="true">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/et_status"
            android:layout_weight="1"
            android:editable="true"
            android:gravity="left|top" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:id="@+id/cb_temperature"
                android:checked="false"
                android:maxLines="1" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:id="@+id/cb_location"
                android:checked="false"
                android:maxLines="1" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anonymous"
                android:id="@+id/cb_anonymous"
                android:checked="false"
                android:layout_gravity="right"
                android:maxLines="1" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
